// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't fail when empty row has custom height 1`] = `
Array [
  Object {
    "formatted": Object {
      "arr": Array [
        "test",
      ],
      "obj": Object {
        "A": "test",
      },
    },
    "header": Array [],
    "raw": Object {
      "arr": Array [
        "test",
      ],
      "obj": Object {
        "A": "test",
      },
    },
  },
]
`;

exports[`ignores empty rows 1`] = `
Array [
  Object {
    "formatted": Object {
      "arr": Array [
        "hello",
        "world",
      ],
      "obj": Object {
        "A": "hello",
        "B": "world",
      },
    },
    "header": Array [],
    "raw": Object {
      "arr": Array [
        "hello",
        "world",
      ],
      "obj": Object {
        "A": "hello",
        "B": "world",
      },
    },
  },
  Object {
    "formatted": Object {
      "arr": Array [
        "hello",
        "world",
      ],
      "obj": Object {
        "A": "hello",
        "B": "world",
      },
    },
    "header": Array [],
    "raw": Object {
      "arr": Array [
        "hello",
        "world",
      ],
      "obj": Object {
        "A": "hello",
        "B": "world",
      },
    },
  },
]
`;

exports[`reads XLSX file correctly 1`] = `
Array [
  Object {
    "formatted": Object {
      "arr": Array [
        "hello",
        123,
      ],
      "obj": Object {
        "A": "hello",
        "B": 123,
      },
    },
    "header": Array [],
    "raw": Object {
      "arr": Array [
        "hello",
        123.123,
      ],
      "obj": Object {
        "A": "hello",
        "B": 123.123,
      },
    },
  },
]
`;

exports[`reads XLSX file with header 1`] = `
Array [
  Object {
    "formatted": Object {
      "arr": Array [
        "hello",
        undefined,
        123,
      ],
      "obj": Object {
        "column1": "hello",
        "column3": 123,
      },
    },
    "header": Array [
      "column1",
      "column2",
      "column3",
    ],
    "raw": Object {
      "arr": Array [
        "hello",
        undefined,
        123.123,
      ],
      "obj": Object {
        "column1": "hello",
        "column3": 123.123,
      },
    },
  },
]
`;

exports[`reads empty XLSX file correctly 1`] = `Array []`;
